syntax = "proto3";

import "google/protobuf/struct.proto";

// Service Configuration
message FaceDetectorOptions {
    string broker_uri = 1;
    string zipkin_host = 2;
    uint32 zipkin_port = 3;
    // Configurations of the HaarCascade model
    HaarCascadeModel model  = 5;
}


message HaarCascadeModel {
    // Path of the model
    string model_file = 1;
    // The value indicates how much the image size is reduced at each image scale
    float scale_factor = 2;
    // How many “neighbors” each candidate rectangle should have
    uint32 min_neighbors = 3;
    // The minimum object size
    google.protobuf.ListValue min_size = 4;
}
